# prog_langs_stuff

./: .gitignore  README.md
c_stuff/bit_operations/: Makefile  bit_operations.c
c_stuff/cliTooling/: CMakeLists.txt  README.md
c_stuff/cliTooling/inc/: tools.h
c_stuff/cliTooling/src/: cli_tool.c  tools.c  utest.c
c_stuff/data_structures/: CMakeLists.txt
c_stuff/data_structures/.cache/clangd/index/: linked_list.c.EBA636D1A1858C56.idx  linked_list.h.10E9C649C062866F.idx  list.c.77B02A4323B33C3A.idx  list.h.65C652C7F6B6BF18.idx  main.c.96EAA169E620B882.idx
c_stuff/data_structures/inc/: data.h  linked_list.h  list.h
c_stuff/data_structures/src/: data.c  linked_list.c  list.c  main.c
c_stuff/foo_bar_tests/: Makefile  main.c
c_stuff/function_pointers/: CMakeLists.txt  b.txt
c_stuff/function_pointers/inc/: animal.h  animal_p.h  cat.h  duck.h
c_stuff/function_pointers/src/: animal.c  cat.c  duck.c  main.c
c_stuff/makefile_testing/: Makefile
c_stuff/makefile_testing/a_target/: something4.res  something5.res  stuff1.res
c_stuff/makefile_testing/inc/: something1.header  something2.header  something3.header
c_stuff/makefile_testing/src/: stuff2.src  stuff3.src  stuff4.src  stuff5.src
c_stuff/math_operations/: .taco.txt.swp  compile.sh  main  main.c
c_stuff/math_operations/include/: linalg.h
c_stuff/packet_processing/: CMakeLists.txt
c_stuff/packet_processing/inc/: header.h
c_stuff/packet_processing/src/: main.c  packet.c
c_stuff/pthreads/: CMakeLists.txt  Makefile
c_stuff/pthreads/.cache/clangd/index/: int_math.c.3128F44C3251651C.idx  int_math.h.C2FB744FBB2F2758.idx  main.c.9D5722C3B7F5F844.idx
c_stuff/pthreads/inc/: buffer_str.h  some_math_threads.h  string_printing.h
c_stuff/pthreads/src/: buffer_str.c  main.c  menu.c  some_math_threads.c  string_printing.c
c_stuff/python_stuff/curses/: test_curses.py
c_stuff/python_stuff/xmlrcp/: xmlrpcClient.py  xmlrpcServer.py
c_stuff/random_number_array/: rand.c
c_stuff/raster_circle/: CMakeLists.txt  Makefile  main.c  main_includes.c
c_stuff/raster_circle/include/: circle.h  common.h  display.h  point.h
c_stuff/raster_circle/src/: circle.c  display.c  main.c  point.c
c_stuff/sorting_algos/: CMakeLists.txt  README.md
c_stuff/sorting_algos/inc/: header.h
c_stuff/sorting_algos/src/: algos.c  main.c
c_stuff/structs/: Makefile  structs.c
c_stuff/template_dir/: CMakeLists.txt
c_stuff/template_dir/inc/: header.h  main.h
c_stuff/template_dir/src/: main.c  tester.c
cpp_stuff/cmake_tutorial/: CMakeLists.txt  tutorial.cxx
cpp_stuff/cpp_tests/: CMakeLists.txt
cpp_stuff/cpp_tests/inc/: header.h
cpp_stuff/cpp_tests/src/: main.cpp  stuff.cpp
cpp_stuff/random_numbers/: rand.cpp
cpp_stuff/random_numbers/asio_tests/: hello_world.cpp
cpp_stuff/template_dir/: CMakeLists.txt
cpp_stuff/template_dir/inc/: header.h
cpp_stuff/template_dir/src/: hello.cpp  main.cpp
cpp_stuff/threads/basics_of_threads/: main.cpp
cpp_stuff/threads/hello_world_threads/: main.cpp
cpp_stuff/ws_DDSHelloWorld/: CMakeLists.txt
cpp_stuff/ws_DDSHelloWorld/src/: HelloWorld.cxx
go_stuff/bob/: Makefile  bob  bob.go  go.mod
go_stuff/composite_types/: Makefile  composite_types  composite_types.go
go_stuff/hello_world/: Makefile  hello_world
go_stuff/predeclared_types_and_declarations/: Makefile  go.mod  types_and_declarations  types_and_declarations.go
haskell_stuff/dist-newstyle/cache/: compiler
haskell_stuff/exercises/: cliTool.hs  genetic_programing.hs  textWrapper.hs
haskell_stuff/exercises/testing_files/: example.txt  newExample.txt
haskell_stuff/unit1/basic_func/: basic_func  basic_func.hs
haskell_stuff/unit1/capstone_functional_oop/: cup.hs
haskell_stuff/unit1/closures_and_partial_applications/: closures_and_partial_applications.hs
haskell_stuff/unit1/first_class_funcs/: first_class_funcs.hs
haskell_stuff/unit1/first_prog/: first_prog.hi  first_prog.hs
haskell_stuff/unit1/hello_world/: hello.hi  hello.hs
haskell_stuff/unit1/higher_order_functions/: higher_order_functions.hs
haskell_stuff/unit1/lambda_functions/: lambda_funcs.hs
haskell_stuff/unit1/lists/: lists.hs
haskell_stuff/unit1/recursion/: recursion.hs
haskell_stuff/unit2/capstone_secret_messages/: secret_messages.hs
haskell_stuff/unit2/type_basics/: type_basics.hs
rust_stuff/hello-ratatui/: Cargo.toml
rust_stuff/too_many_linked_lists/: Cargo.toml
rust_stuff/tutorials/: README.md
rust_stuff/yig/: Cargo.toml
(+35 files in other folders)
